# micdrop

./: .gitignore  README.md  TUTORIAL.md  pyproject.toml
example/: example1.py
micdrop/: __init__.py  base.py  collect.py  files.py  flow.py  loose.py  segment.py  source_modifiers.py
micdrop/exceptions/: __init__.py
micdrop/ext/: anx.py  csv.py  etree.py  mysql_connector.py  pandas.py  pandoc.py  zip.py
micdrop/ext/sql_alchemy/: __init__.py  common.py  mysql.py
micdrop/pipeline/: __init__.py  base.py  collect.py  debug.py  files.py  filter.py  flow.py  loose.py  merge.py  segment.py  source_modifiers.py  structure.py  transformers.py
micdrop/process/: __init__.py
micdrop/sink/: __init__.py  base.py  modifiers.py  python.py
micdrop/source/: base.py  modifiers.py  python.py
micdrop/utils/: __init__.py  auto_map.py  deferred_operand.py
tests/: __init__.py  deferred_operand.py  ext_sqlalchemy.py
