[tool.poetry]
name = "micdrop"
version = "0.1.0"
description = "Library with declaritive interface to aid in building tools for migrating, mapping, importing, converting, and transforming data."
authors = ["Dominick Johnson <dominick.johnson@tylertech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = {version = "^2.0.20", optional = true}

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
